# haskell99problems

./: LICENSE  README.md  haskell99problems.cabal  stack.yaml
src/H99/: Arithmetic.hs  BinaryTrees.hs  Graphs.hs  LogicAndCodes.hs  Miscellaneous.hs  MultiwayTrees.hs
src/Haskell99Problems/: Arithmetic.hs
test/H99/: ArithmeticSpec.hs  BinaryTreesSpec.hs  GraphsSpec.hs  LogicAndCodesSpec.hs  MiscellaneousSpec.hs  MultiwayTreesSpec.hs
test/Haskell99Problems/: ArithmeticSpec.hs
