name:                haskell99problems
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/1yefuwang1/haskell99problems#readme
license:             BSD3
license-file:        LICENSE
author:              1yefuwang1
maintainer:          1yefuwang1@gmail.com
copyright:           1yefuwang1
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     H99.Arithmetic
                     , H99.LogicAndCodes
                     , H99.BinaryTrees
  build-depends:       base >= 4.7 && < 5
                     , mtl
  default-language:    Haskell2010

test-suite haskell99problems-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell99problems
                     , hspec
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/1yefuwang1/haskell99problems
